--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/a.svg" />
+    <link rel="icon" type="image/svg+xml" href="./a.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon portfolio</title>
   </head>
