deploy : last com

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="descrption"
+      content="développeur web profesionnel full-stack "
+    />
+    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <title>Mon portfolio</title>
   </head>
   <body>
